# kinfu

./: CMakeLists.txt  README.md  mainpage.dox  package.xml
cfg/: dyn_config.cfg
cfg/cpp/kinfu/: kinfu_Config.h
docs/: kinfu_Config-usage.dox  kinfu_Config.dox  kinfu_Config.wikidoc
launch/: kinfu.launch
src/: kinfuLS.cpp
src/kinfu/cfg/: kinfu_Config.py
